Still fixing the floated elements line spacing.

--- a/app/assets/stylesheets/modules/home.css.scss
+++ b/app/assets/stylesheets/modules/home.css.scss
@@ -183,13 +183,13 @@ $disabled-color: #aaa;
   float:left;
 
   // minimise gap and use line height instead.
-  margin: 0;
+  margin: 0.1em 0;
 }
 
 .result-citation {
   float:right;
-  margin: 0;
-  margin-top:0.2em;
+  margin: 0.1em 0;
+
 }
 
 .description-text {
